Added eslinter
